commit: CSS fix JSL page, menu took over page, unclickable links on mobile

--- a/style.css
+++ b/style.css
@@ -136,6 +136,7 @@ body {
         display: flex;
         flex-flow: row wrap;
         width: 100%;
+        height: auto;
     }
     .vis_toggle{
         transform: scaleY(0);
